Fixes scaling issu on narrow resoulution devices/windows
hopefully

--- a/src/assets/components/Input/Input.module.css
+++ b/src/assets/components/Input/Input.module.css
@@ -1,5 +1,6 @@
 .input-wrapper {
   /* self placement */
+  justify-self: flex-end;
   margin-top: auto;
 
   /* content display */
